--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "latest",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "pg": "4.x",
-    "bcrypt": "latest"
+    "jsonwebtoken": "^7.2.1",
+    "pg": "4.x"
   },
   "devDependencies": {},
   "scripts": {
