--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.2.1",
-    "pg": "4.x"
+    "pg-promise": "^5.5.2"
   },
   "devDependencies": {},
   "scripts": {
