--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 # User-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
+/.idea/
 
 # Sensitive or high-churn files:
 .idea/dataSources/
@@ -90,5 +91,3 @@ jspm_packages
 
 # Yarn Integrity file
 .yarn-integrity
-
-
