--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.2.1",
+    "jsreport": "^1.7.0",
     "pg-promise": "^5.5.2"
   },
   "devDependencies": {},
