--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "express": "^4.14.0",
     "jsonwebtoken": "^7.2.1",
     "jsreport": "^1.7.0",
+    "jsreport-authentication": "^1.3.0",
+    "jsreport-mongodb-store": "^0.5.6",
     "pg-promise": "^5.5.2"
   },
   "devDependencies": {},
