--- a/package.json
+++ b/package.json
@@ -4,24 +4,19 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "bcrypt": "latest",
-    "body-parser": "^1.17.2",
-    "express": "^4.15.3",
-    "express-fileupload": "^0.1.4",
-    "jsonwebtoken": "^7.4.1",
-    "jsreport": "^1.7.0",
-    "jsreport-authentication": "^1.3.0",
-    "jsreport-mongodb-store": "^0.5.6",
-    "pg-promise": "^5.9.5"
+    "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "jsreport": "^2.10.0",
+    "jsreport-authentication": "^2.6.0",
+    "jsreport-mongodb-store": "^1.3.3",
+    "pg-promise": "^10.7.3"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
-  },
-  "engines": {
-    "node": "7.10.1",
-    "npm": "4.2.0"
   },
   "author": "",
   "license": "ISC"
